<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contactos</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_crear">Crear Contacto</string>
    <string name="txt_nombre" />
    <string name="txt_telefono" />
    <string name="txt_email" />
    <string name="txt_direccion" />
    <string name="btn_agregar">Agregar Contacto</string>

</resources>
