<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TabHost
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tabHost"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@+id/tabhost"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/lbl_crear"
                        android:id="@+id/txt_nombre"
                        android:layout_below="@+id/txt_telefono"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="60dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="@string/txt_nombre"
                        android:ems="10"
                        android:id="@+id/txt_nombre"
                        android:layout_below="@+id/txt_nombre"
                        android:layout_toRightOf="@+id/txt_telefono"
                        android:layout_toEndOf="@+id/txt_telefono"
                        android:layout_marginTop="15dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:hint="Nombre del contacto" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/txt_telefono"
                        android:layout_below="@+id/txt_nombre"
                        android:layout_toRightOf="@+id/txt_telefono"
                        android:layout_toEndOf="@+id/txt_telefono"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:text="@string/txt_telefono"
                        android:hint="Telefono" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/txt_email"
                        android:layout_below="@+id/txt_telefono"
                        android:layout_toRightOf="@+id/txt_telefono"
                        android:layout_toEndOf="@+id/txt_telefono"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:hint="E-mail"
                        android:text="@string/txt_email" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress"
                        android:ems="10"
                        android:id="@+id/txt_direccion"
                        android:hint="Dirección"
                        android:text="@string/txt_direccion"
                        android:layout_below="@+id/txt_email"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_agregar"
                        android:id="@+id/btn_agregar"
                        android:layout_below="@+id/txt_direccion"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:onClick="onClick"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="Lista de contactos"
                        android:id="@+id/textView3"
                        android:layout_marginTop="10dp" />

                    <ListView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/listView" />
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>
